Renames `prevent-scroll` class to `hide-overflow`.
This is to prevent confusion with the new `preventScroll` state being added shortly.

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,4 +1,4 @@
-.body .prevent-scroll {
+.body .hide-overflow {
   position: relative;
   overflow: hidden;
 }
@@ -181,7 +181,7 @@ a.work-item {
   }
 }
 
-/* Fixes image over lay with `.fluid-container`.  */
+/* Fixes image overlay with `.fluid-container`.  */
 .image:before {
   z-index: 1;
 }
